# DL_ProjectStructureSetup_1

./: .gitignore  LICENSE  README.md  notes.txt  setup.cfg  setup.py  template.py  test_Cases_notes.txt  tox.ini
research/: st_01.ipynb  st_02.ipynb
src/deepClassifier/config/: configuration.py
tests/unit/: test_utils.py
