[metadata]
license = MIT
license_file = LICENSE
classifier =
    #on which version and which programming language , package should be compatible.
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.7
    #package created should be OS independent.
    Operating System :: OS Independent

[options]
# if there is requirement of some 3rd party library in our package , llly u can mention other libraries as well
install_requires =
    ensure==1.0.2
# bare minimum requirement that python version should be greater then 3.7
python_requires = >=3.7    

#package required for testing
[options.extras_require]
testing =
    pytest>=7.1.3
    mypy>=0.971
    flake8>=5.0.4
    tox>=3.25.1
    black>=22.8.0
#package name is deep calssifier(where our files are present) and lets say we imported tensorflow library and if there are some open bugs 
#or testing error in it , so our app should avoid looking at those error ,as our application can fail so we use py.typed
[options.package_data]
deepClassifier = py.typed
  
[flake8]
max-line-length = 160
exclude = __init__.py